--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600;700&family=Nunito+Sans:wght@200;300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;500;600;700&family=Nunito+Sans:wght@200;300;400;500;600;700&display=swap"
       rel="stylesheet" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
